data/derived/comb/progs/unify/prog5112.ml.out
Characters 102-105:
  | _ -> additivePersistence(sumList(n));;
                                    ^^^
Error: This expression has type int but an expression was expected of type
         int list
